manifestos/06-biblioteca.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-biblioteca
  namespace: biblioteca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-bibioteca
  template:
    spec:
      containers:
        # container do banco da biblioteca
        - name: banco-dados
          image: postgres:alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresdb
              mountPath: /var/lib/postgresql/data
        - name: app-bibpub
          image: marcelopinto350/bibpub:1.7
          ports:
          - containerPort: 8000
        
    #    - name: fluentd
    #      image: fluentd:latest
    #      ports:
    #        - containerPort: 3100
    #      volumeMounts:
    #      - name: logs
    #        mountPath: /var/log/bibpub
    #      command:
    #      - "fluentd"
    #      - "-c"
    #      - "/fluentd/etc/fluentd.conf"

    #    - name: nginx
    #      image: nginx:latest
    #      ports:
    #      - containerPort: 80
    #      volumeMounts:
    #      - name: logs
    #        mountPath: /var/log/nginx
      
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-pvc
    #    - name: fluentd-config
    #      configMap:
    #        name: fluentd-config 
    #    - name: logs
    #      emptyDir: {}
