manifestos/08-fluentBibpub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd
  namespace: biblioteca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-fluentd
  template:
    metadata:
      labels:
          app: app-fluentd
    spec:
      containers:
        - name: fluentd
          image: fluentd:latest
          ports:
            - containerPort: 3100
          volumeMounts:
          - name: logs
            mountPath: /var/log/bibpub
          command:
          - "fluentd"
          - "-c"
          - "/fluentd/etc/fluentd.conf"
  
      volumes:
        - name: fluentd-config
          configMap:
            name: fluentd-config
