manifestos/appWeb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: biblioteca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
          app: app
    spec:
      containers:
        # aplicação de biblioteca
        - name: app-bibpub
          image: marcelopinto350/bibpub:1.9
          limits:
            memory: "128Mi"
            cpu: "500m"
          ports:
          - containerPort: 8000
