manifestos/deamonFluent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-ds
  namespace: logging
spec:
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      containers:
      - name: fluentd
        image: fluent/fluentd:latest
        volumeMounts:
        - name: fluentd-config
          mountPath: /etc/fluent/fluent.conf
      volumes:
      - name: fluentd-config
        configMap:
          name: fluentd-config
