manifestos/fluent.yaml
apiVersion: v1
kind: Pod
metadata:
  name: log-monitor    
  namespace: biblioteca
spec:
  containers:
    - name: fluentd
      image: fluentd:latest
      ports:
        - containerPort: 3100
      volumeMounts:
      - name: logs
        mountPath: /var/log/bibpub
      command:
      - "fluentd"
      - "-c"
      - "/fluentd/etc/fluentd.conf"
  
  volumes:
    - name: logs
      emptyDir: {}
