manifestos/fluentBibpub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd
  namespace: biblioteca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-fluentd
  template:
    metadata:
      labels:
          app: app-fluentd
    spec:
      containers:
        - name: fluentd
          image: fluentd:latest
          ports:
            - containerPort: 3100
          volumeMounts:
          - name: fluentd-conf
            mountPath: /var/log/bibpub
          #env:
          #  - name: FLUENTD_CONF
          #    value: /fluentd/etc/fluent.conf
          
      volumes:
        - name: fluentd-conf
          configMap:
            name: fluentd-config
