manifestos/postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  namespace: biblioteca
spec:
  containers:
    - name: postgres
      image: postgres:10.4
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgres/data
  volumes:
    - name: db-data
      hostPath:
        path: /var/lib/pgdata
        type: DirectoryOrCreate
