manifestos/03-pg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: biblioteca
spec:
  type: ClusterIP
  ports:
  - name: "postgres-svc"
    port: 5432
    targetPort: 5432
