manifestos/04-biblioteca-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: biblioteca-svc
  namespace: biblioteca
spec:
  type: NodePort
  ports:
  - name: biblioteca-svc
    port: 8000
    targetPort: 8000
    nodePort: 32000

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: biblioteca-svc
  namespace: biblioteca
addressType: IPv4
ports:
  - name: biblioteca-svc
    port: 8000
    protocol: TCP
    appProtocol: http 
endpoints:
  - addresses:
      - "10.1.2.3"
  - addresses:
      - "10.4.5.6"
