manifestos/08-endpointBibpub.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: biblioteca-endpoint
  namespace: biblioteca
subsets:
  - addresses:   
  - ip: "192.168.84.100"
    ports:
      - port: 31100
    name: biblioteca-svc
