manifestos/08-redisBibpub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-redis
  namespace: biblioteca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-redis
  template:
    metadata:
      labels:
          app: app-redis
    spec:
      containers:
        # container do redis
        - image: redis:alpine
          name: redis
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - mountPath: /data
              name: redis-data
      nodeSelector:
        tiposvc: db  

      # volumes para persistência de dados  
      volumes:
        - name: redis-data
          emptyDir: {}
              
# colocação dos serviços para acesso externo
---
kind: Service
apiVersion: v1
metadata:
  name: redis-svc
  namespace: biblioteca
spec:
  type: ClusterIP
  ports:
  - name: "redis-svc"
    port: 6379
    targetPort: 6379
  selector:
    app: redis
