manifestos/biblioteca.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-biblioteca
  namespace: biblioteca
spec:
  containers:
    - name: banco-dados
      image: alpine/postgres
      #imagepullpolicy: IfNotPresent
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: postgresdb
          mountPath: /var/lib/postgresql/data
    - name: app-biblioteca
      image: marcelopinto350/bibpub:1.0
      depends_on:
        - banco-dados
      ports:
      - containerPort: 8000
    
    - name: fluentd
      image: fluentd/fluentd:latest
      ports:
        - containerPort: 3100
      volumeMounts:
      - name: logs
        mountPath: /var/log/bibpub
      command:
      - "fluentd"
      - "-c"
      - "/fluentd/etc/fluentd.conf"

    - name: nginx
      image: nginx:latest
      ports:
      - containerPort: 80
      volumeMounts:
      - name: logs
        mountPath: /var/log/nginx
  
  volumes:
    - name: postgresdb
      persistentVolumeClaim:
        claimName: postgres-pvc
    - name: fluentd-config
      configMap:
        name: fluentd-config 
    - name: static
      secret:
      secretName: static-content

---
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: biblioteca
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: bibpub
  namespace: biblioteca
spec:
  selector:
    app: app-biblioteca
  ports:
    - port: 8000
  type: ClusterIP
