manifestos/endpointBibpub.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: biblioteca-endpoint
  namespace: biblioteca
subsets:
  - addresses:   
    - ip: 192.168.84.100  
    ports:
      - name: http
        port: 31100
