manifestos/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bibpub-ingress
  namespace: biblioteca
spec:
  rules:
  - host: biblioteca.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-svc
            port:
              number: 8080
