manifestos/07-ingressBibpub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bibpub-ingress
  namespace: biblioteca
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: biblioteca.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-bibpub
            port:
              number: 31100
